[package]
name = "http-sh"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.14", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-staticfile = "0.9.4"
futures = "0.3"
tokio-util = { version = "0.7.3", features = ["full"] }
url = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.83"
http = "0.2.8"
http-serde = "1.1.0"
scru128 = { version = "2.2.0", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
indoc = "1.0.7"
tempfile = "3"
