[package]
name = "http-sh"
version = "0.1.0"
edition = "2021"

[lib]
name = "http_sh"
path = "src/lib.rs"

[[bin]]
name = "http-sh"

[dependencies]
clap = { version = "4.1.4", features = ["derive", "wrap_help"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["server", "http1", "http2", "runtime"] }
hyper-staticfile = "0.9.4"
futures = "0.3"
tokio-util = { version = "0.7.3", features = ["full"] }
url = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.83", features = ["preserve_order"] }
http = "0.2.8"
http-serde = "1.1.0"
scru128 = { version = "2.2.0", features = ["serde"] }
command-fds = { version = "0.2.2", features = ["tokio"] }
tokio-pipe = "0.2.12"
tokio-rustls = "0.23.4"
rustls-pemfile = "1.0.2"
rustls = "0.20.8"

[dev-dependencies]
pretty_assertions = "1.3.0"
indoc = "2.0.0"
tempfile = "3"
